n8n/manifests/n8n-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: n8n

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:2.41.3
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
        volumeMounts:
        - name: n8n-config
          mountPath: "/home/node/.n8n"
        ports:
        - name: http
          containerPort: 5678
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5678
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5678
      volumes:
      - name: n8n-config
        hostPath:
          path: "/mnt/k3s-prod-data/n8n"

---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  selector:
    app: n8n
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5678
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-ingress
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: n8n
          port: 80
